refactor: change names of selectors according to rule 2.1 in html-and-css-extended.md and rules 3.1, 3.2, 3.3 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -5,42 +5,43 @@ body {
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.header__scheme {
   width: 100%;
 }
 
-.aaa .more_inf {
+.header__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
 
-  .aaa {
+  .header {
     text-align: center;
   }
 
 }
 
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
 
-.task {
+.task,
+.item__task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
 
-.task-row-wrapper {
+.add-item__task-wrapper {
   display: flex;
 }
 
@@ -108,7 +109,7 @@ label[for="new-task"] {
   margin: 0 0 20px;
 }
 
-input#new-task {
+.add-item__task {
   width: 318px;
 }
 
@@ -141,18 +142,18 @@ li >    input[type="text"] {
   width: 226px;
 }
 
-button.delete img {
+.item__delete-button img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.item__delete-button img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.completed__list label {
   text-decoration: line-through;
   color: #888;
 }
@@ -162,11 +163,11 @@ ul li input[type="text"] {
   display: none;
 }
 
-ul li.editMode input[type="text"] {
+.item_edit input[type="text"] {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+.item_edit label {
   display: none;
 }
