--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.todo-page {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -45,22 +45,22 @@ body {
   display: flex;
 }
 
-ul {
+.list {
   margin: 0;
   padding: 0px;
 }
 
-li,
-h3 {
+.item,
+.block-title {
   list-style: none;
 }
 
-input,
-button{
+.task,
+.button{
   outline: none;
 }
 
-button {
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -70,13 +70,12 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.button:hover {
   color: #3a3A3a;
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+.block-title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -86,7 +85,7 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.task {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -99,12 +98,12 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.task:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.add-item__title {
   display: block;
   margin: 0 0 20px;
 }
@@ -114,60 +113,57 @@ label[for="new-task"] {
 }
 
 /* Task list */
-li {
+.item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-li > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.item__check {
   margin: 0 10px;
 }
 
-li > label {
+.item__task {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li >    input[type="text"] {
+.item__edit-task {
   width: 226px;
 }
 
-.item__delete-button img {
+.item__delete-icon {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-.item__delete-button img:hover {
+.item__delete-icon:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-.completed__list label {
+.completed__list .item__task {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+.item__edit-task {
   display: none;
 }
 
-.item_edit input[type="text"] {
+.item_edit .item__edit-task {
   display: inline-block;
   width: 224px;
 }
 
-.item_edit label {
+.item_edit .item__task {
   display: none;
 }
