--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
 
 .list {
   margin: 0;
-  padding: 0px;
+  padding: 0;
 }
 
 .item,
@@ -62,7 +62,7 @@
 
 .button {
   background: none;
-  border: 0px;
+  border: 0;
   color: #888;
   font-size: 15px;
   width: 60px;
